manifests/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-ingress
spec:
  rules:
  - host: test-nginx.tanzu.rams.adp.vcu.edu
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  - host: test-apache.tanzu.rams.adp.vcu.edu
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: php-apache
            port:
              number: 80
