manifests/testnetworkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-emd
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
